# ESP32_Smart_lock

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/App/: App_IO.c  App_IO.h
main/Com/: Com_Config.h
main/Dri/: Dri_BLE.c  Dri_BLE.h  Dri_NVS.c  Dri_NVS.h
main/Int/: Int_BDR6120.c  Int_BDR6120.h  Int_FPM383.c  Int_FPM383.h  Int_SC12B.c  Int_SC12B.h  Int_WS2812.c  Int_WS2812.h  Int_WTN6170.c  Int_WTN6170.h
