idf_component_register(
    SRCS 
        "main.c"
        "./Int/Int_BDR6120.c"
        "./Int/Int_WTN6170.c"
        "./Int/Int_SC12B.c"
        "./Int/Int_WS2812.c"
        "./Int/Int_FPM383.c"
        "./Dri/Dri_NVS.c"
        "./App/App_IO.c"
    INCLUDE_DIRS 
        "."
        "./Dri"
        "./Int"
        "./Mid"
        "./App"
        "./Com"
)
